# circuitpython-midi-chip-platform-governance

./: .gitignore  AGENTS.md  README.md  pyproject.toml
device/: code.py  i2s_test.py  requirements.txt  settings.toml.example
docs/: agile_delivery_release_plan_v0.1.0.md  autonomous_midi_batch_host_acceptance_v0.1.0.md  backlog_sanity_check_v0.1.0.md  ble_midi_core_priority_amendment_v0.1.0.md  board_capability_matrix_v0.1.0.md  burn_in_heap_stability_spec_v0.1.0.md  device_connection_proof_v0.1.0.md  external_qa_audit_report_v0.1.0.md  lessons_learned_sprint_2_checkpoint_001_v0.1.0.md  lessons_learned_sprint_2_checkpoint_002_v0.1.0.md  lessons_learned_sprint_3_checkpoint_004_v0.1.0.md  mcp_us_001_device_source_baseline_inventory_v0.1.0.md  mcp_us_004_board_capability_review_v0.1.0.md  mcp_us_005_configuration_secret_boundary_review_v0.1.0.md  mcp_us_007_usb_midi_receive_review_v0.1.0.md  mcp_us_009_note_semantics_review_v0.1.0.md  mcp_us_010_pitch_bend_cc1_review_v0.1.0.md  mcp_us_016_i2s_diagnostic_review_v0.1.0.md  mcp_us_051_hil_runner_review_v0.1.0.md  mcp_us_051_mcp_us_007_dependency_closed_deployment_impediment_v0.1.0.md  mcp_us_063_d1_core_review_v0.1.0.md  mcp_us_075_safe_audio_gate_review_v0.1.0.md  mvp_scope_v0.1.0.md  physical_chip_display_expansion_amendment_v0.1.0.md  quickstart_installation_v0.1.0.md  reuse_matrix_v0.1.0.md  risk_register_v0.1.0.md  source_register_v0.1.0.md  team_raci_v0.1.0.md  user_stories_v0.1.0.md  wifi_runtime_fallback_amendment_v0.1.0.md
tests/: test_audio_safety.py  test_cli.py  test_configuration.py  test_d1_core.py  test_hil.py  (+7 more)
(+23 files in other folders)
