[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "circuitpython-midi-chip-platform"
version = "0.7.0"
description = "Import-safe CircuitPython capability and USB-MIDI foundation for a retro-synth platform"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "pappavis" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8,<9"]
hil = ["pyserial>=3.5,<4"]

[project.scripts]
midi-chip-platform = "midi_chip_platform.cli:CommandLineApplication.console_entry"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
